# plex-mcp-server

./: .dmypy.json  .gitignore  .pre-commit-config.yaml  COLLECTION_REFACTORING_COMPLETE.md  MYPY_SETUP_SUMMARY.md  README.md  REFACTORING_GUIDE.md  TYPE_FIXING_GUIDE.md  TYPING_STATUS.md  docker-compose.yml  fix_types.sh  plex_mcp_server.py  pyproject.toml  refactor_tools.py  t
.claude/: settings.local.json
src/plex_mcp_server/: __main__.py  server.py
src/plex_mcp_server/modules/: __init__.py  client.py  collection.py  library.py  media.py  playlist.py  server.py  sessions.py  user.py
src/plex_mcp_server/types/: enums.py  models.py
